Add YAML labware config

--- a/progress/2026-02-12.md
+++ b/progress/2026-02-12.md
@@ -122,3 +122,159 @@ Validate test coverage after gantry refactor and restore failing tests.
 
 ## Notes
 - No hardware commands were executed. All validation was via mocked/unit tests only.
+
+---
+
+## Strict deck YAML and labware volume/calibration
+
+### Task
+Implement strict deck YAML configuration: deck file defines labware only (no gantry); YAML is validated strictly (missing/extra/wrong-type fields fail); well plates use two-point calibration (A1 + A2, axis-aligned) and derived well geometry; add volume fields to WellPlate and Vial; output `dict[str, Labware]` keyed by YAML names.
+
+### Work completed
+- **Tests (TDD)**: Added `tests/test_deck_loader.py` with 19 tests covering: valid load and derived wells/volume; two-point calibration in all four axis-aligned orientations (horizontal inc/dec, vertical inc/dec); invalid calibration (diagonal, identical points); missing required fields (top-level `labware`, well plate fields, vial fields); extra fields (top-level, per-entry); type coercion (numeric strings allowed, non-coercible fails); volume validation (working_volume_ul <= capacity_ul, positive); empty `labware: {}` allowed. Extended `tests/test_labware.py` with volume and extra-field tests for WellPlate and Vial.
+- **Labware models**: Added `capacity_ul` and `working_volume_ul` to `WellPlate` and `Vial` with validators (positive, working <= capacity). Set `model_config = ConfigDict(extra="forbid")` on `Coordinate3D`, `Labware`, and subclasses so unknown fields raise `ValidationError`.
+- **Deck schema**: Added `src/labware/deck_schema.py` with `DeckSchema` (single required key `labware`), `WellPlateEntry` (type, name, model, rows, columns, dimensions, a1, calibration.a2, x_offset_mm, y_offset_mm, capacity_ul, working_volume_ul) and `VialEntry` (type, name, model, height_mm, diameter_mm, center, vials, capacity_ul, working_volume_ul). Discriminated union on `type`; all schemas use `extra='forbid'`. Two-point calibration validator: A1 and A2 must be axis-aligned (same x or same y) and not identical.
+- **Deck loader**: Added `src/labware/deck_loader.py` with `load_labware_from_deck_yaml(path)` that parses YAML, validates with `DeckSchema`, then builds `WellPlate` or `Vial` for each entry. Well positions are derived from A1, calibration A2, and offsets (columns-along-X or columns-along-Y depending on A2); row labels A–Z for up to 26 rows.
+- **Sample config**: Added `configs/deck.sample.yaml` with one well plate and one vial matching the strict schema.
+
+### Issues and resolutions
+- None. All 30 tests (19 deck loader + 11 labware) pass.
+
+### Design decisions
+- Deck YAML contains **labware only**; gantry/serial settings are not in the deck file (per plan).
+- Board/instrument YAML and loader are **deferred**; not implemented in this change.
+- Two-point calibration: A2 must share either x or y with A1; diagonal or identical points raise `ValidationError`.
+- Row labels limited to A–Z (1–26 rows) for simplicity; can be extended later for more rows.
+
+---
+
+## Single-vial model refactor and class-level field clarity
+
+### Task
+Refactor `Vial` to represent a single vial (not a vial rack), move concrete `name`/location-facing fields into `WellPlate` and `Vial` so each class directly communicates YAML requirements, and keep `Labware` as a high-level behavior base.
+
+### Work completed
+- **Labware base simplification** (`src/labware/labware.py`):
+  - Removed data fields (`name`, `locations`) from `Labware`.
+  - Kept high-level shared behavior only (`validate_name`, abstract-style `get_location`, `get_initial_position`).
+- **WellPlate clarity** (`src/labware/well_plate.py`):
+  - Added explicit `name` field on the concrete class.
+  - Kept explicit `wells` mapping and well-centric lookup.
+  - Added `get_location(location_id)` implementation that delegates to `get_well_center`.
+- **Vial single-object redesign** (`src/labware/vial.py`):
+  - Replaced rack-style `vials` mapping and `center` with a single `location: Coordinate3D`.
+  - Updated accessors: `get_vial_center()` returns the single location; `get_location()` supports default / `"A1"` / vial name aliases.
+  - Kept strict geometry and volume validation.
+- **Deck schema/loader updates**:
+  - `src/labware/deck_schema.py`: `VialEntry` now requires `location` (removed `vials` and `center`).
+  - `src/labware/deck_loader.py`: builds `Vial` from `location`.
+  - `configs/deck.sample.yaml`: updated vial example to the new single-location schema.
+- **Tests updated**:
+  - `tests/test_labware.py`: replaced base `Labware` data-field tests with concrete `WellPlate`/`Vial` tests; converted vial tests to single-location semantics.
+  - `tests/test_deck_loader.py`: updated vial fixture/expectations to use `location`.
+
+### Validation
+- Targeted tests:
+  - `pytest tests/test_labware.py tests/test_deck_loader.py -v` -> **31 passed**
+- Full suite:
+  - `pytest tests -q` -> **83 passed**
+
+### Notes
+- No hardware commands were executed; all validation used unit tests only.
+
+---
+
+## Friendly deck loader exceptions (no traceback in sample script)
+
+### Task
+Provide clean user-facing deck loader errors (emoji + explanation + fix guidance) without full tracebacks when running the sample loader script, implemented in core `deck_loader` code.
+
+### Work completed
+- Added **core exception utilities** in `src/labware/deck_loader.py`:
+  - `DeckLoaderError` (user-facing exception type)
+  - `_format_loader_exception(path, error)` (concise formatting + actionable guidance)
+  - `load_labware_from_deck_yaml_safe(path)` (wraps raw loader and raises `DeckLoaderError` with friendly message)
+- Updated `show_deck_objects.py`:
+  - now uses `load_labware_from_deck_yaml_safe`
+  - catches `DeckLoaderError` and prints only the formatted message (no traceback dump)
+- Fixed sample config issue that was causing the traceback:
+  - `configs/deck.sample.yaml`: corrected `plate_1.calibration.a2.y` from `-13.0` to `-10.0` (axis-aligned with `a1`)
+- Added test coverage:
+  - `tests/test_deck_loader.py::test_safe_loader_returns_clean_error_message`
+  - validates emoji prefix and fix guidance presence.
+
+### Validation
+- Targeted:
+  - `pytest tests/test_deck_loader.py tests/test_labware.py -q` -> **32 passed**
+- Full suite:
+  - `pytest tests -q` -> **83 passed**
+- Manual friendly-error check:
+  - Triggered a diagonal calibration YAML through `load_labware_from_deck_yaml_safe`
+  - Verified output is a concise `❌ ...` message with `How to fix:` guidance.
+
+### Notes
+- No hardware commands were executed; all validation used unit tests only.
+
+---
+
+## Add model_name and sample deck inspection script
+
+### Task
+Add `model_name` as a required attribute for both `WellPlate` and `Vial`, propagate the change through strict deck schema/loading and sample YAML, and provide a simple script to load `configs/deck.sample.yaml` and print the resulting objects.
+
+### Work completed
+- Added required `model_name` fields to:
+  - `src/labware/well_plate.py`
+  - `src/labware/vial.py`
+- Updated strict deck schema keys:
+  - `src/labware/deck_schema.py`: `model` -> `model_name` for both `WellPlateEntry` and `VialEntry`.
+- Updated object construction path:
+  - `src/labware/deck_loader.py` now passes `model_name` into `WellPlate` and `Vial`.
+- Updated sample YAML:
+  - `configs/deck.sample.yaml` now uses `model_name`.
+- Updated tests:
+  - `tests/test_labware.py`: all `WellPlate`/`Vial` constructions now include `model_name`.
+  - `tests/test_deck_loader.py`: all YAML fixtures now use `model_name`.
+- Added sample script:
+  - `show_deck_objects.py` prints loaded deck object mappings with full `model_dump()` output.
+
+### Issues and resolutions
+- **Pydantic warning**: `model_name` conflicts with the default `model_` protected namespace.
+  - **Resolution**: set `protected_namespaces=()` in:
+    - `WellPlate`
+    - `Vial`
+    - `WellPlateEntry`
+    - `VialEntry`
+  - This removed warnings while keeping strict validation behavior.
+
+### Validation
+- Targeted:
+  - `pytest tests/test_labware.py tests/test_deck_loader.py -q` -> **31 passed**
+- Full suite:
+  - `pytest tests -q` -> **83 passed**
+
+### Notes
+- No hardware commands were executed; all validation used unit tests only.
+
+---
+
+## Deck loader builder kwargs refactor
+
+### Task
+Refactor deck loader so WellPlate and Vial are built from entry-derived kwargs instead of hand-mapping every field, reducing duplicate maintenance when model or schema fields change.
+
+### Work completed
+- Added **`_entry_kwargs_for_model(entry, model_class)`** in `src/labware/deck_loader.py`:
+  - Builds constructor kwargs from `entry.model_dump()` filtered to keys present on `model_class.model_fields`.
+  - Entry-only fields (e.g. `type`, `a1`, `calibration`, `x_offset_mm`, `y_offset_mm` for well plate) are dropped automatically.
+- Refactored **`_build_well_plate`**:
+  - Uses `_entry_kwargs_for_model(entry, WellPlate)` then sets `kwargs["wells"] = _derive_wells_from_calibration(entry)` and instantiates `WellPlate(**kwargs)`.
+- Refactored **`_build_vial`**:
+  - Uses `_entry_kwargs_for_model(entry, Vial)` then sets `kwargs["location"] = _point_to_coord(entry.location)` and instantiates `Vial(**kwargs)`.
+
+### Validation
+- Targeted: `pytest tests/test_deck_loader.py tests/test_labware.py -q` -> **32 passed**
+- Full suite: `pytest tests -q` -> **84 passed**
+
+### Notes
+- No new tests were added; existing deck and labware tests lock behavior. YAML contract and loader behavior unchanged.
