Change validation point on config

--- a/progress/2026-02-12.md
+++ b/progress/2026-02-12.md
@@ -448,3 +448,38 @@ Added `offset_x`, `offset_y`, and `depth` as instance attributes to `BaseInstrum
 
 ### Validation
 - `pytest -q` — 145 passed, 0 failed
+
+---
+
+## Deck package reorganization + calibration nesting update
+
+### Task
+Move deck-related code into `src/labware/deck/`, split `DeckLoaderError` into a dedicated module, and update deck YAML processing to support calibration points under `calibration.a1` and `calibration.a2` (with sample YAML using nested calibration points).
+
+### Work completed
+- Moved deck modules into package path:
+  - Added `src/labware/deck/__init__.py`
+  - Added `src/labware/deck/loader.py`
+  - Added `src/labware/deck/schema.py`
+  - Added `src/labware/deck/errors.py` (contains `DeckLoaderError`)
+- Removed old module locations:
+  - Deleted `src/labware/deck_loader.py`
+  - Deleted `src/labware/deck_schema.py`
+- Updated imports:
+  - `src/labware/__init__.py` now re-exports from `src/labware/deck/`
+  - `tests/test_deck_loader.py` imports from `src.labware.deck.loader`
+  - `README.md` example import updated to `src.labware.deck.loader`
+- Updated schema/loader for nested calibration points:
+  - `WellPlateEntry` now supports canonical `calibration.a1` and `calibration.a2`
+  - Loader derives wells using `entry.calibration.a1` / `entry.calibration.a2` path via canonical `a1_point`
+  - Kept backward-compatible fallback for top-level `a1` during transition
+- Updated sample config:
+  - `configs/deck.sample.yaml` now places A1 and A2 both under `calibration`
+- Updated AGENTS docs for new deck package file paths and calibration layout.
+
+### Validation
+- Targeted: `pytest tests/test_deck_loader.py tests/test_labware.py -q` -> **32 passed**
+- Full suite: `pytest tests -q` -> **177 passed**
+
+### Notes
+- No hardware commands were executed; all validation used unit tests only.
