Fix error handling

--- a/progress/2026-02-12.md
+++ b/progress/2026-02-12.md
@@ -184,6 +184,51 @@ Refactor `Vial` to represent a single vial (not a vial rack), move concrete `nam
 
 ---
 
+## PR review fixes: safety, validation, and loader ergonomics
+
+### Task
+Address PR review feedback across deck loader and labware models: preserve traceback chaining, tighten CNC-safe numeric validation, enforce plate integrity constraints, clean up vial API behavior, and add missing loader-safe-path tests.
+
+### Work completed
+- **Exception chaining** (`src/labware/deck/loader.py`)
+  - Updated `load_labware_from_deck_yaml_safe` to raise `DeckLoaderError(... ) from exc` (instead of `from None`) to preserve original traceback context.
+- **Finite coordinate validation** (`src/labware/labware.py`)
+  - Added `Coordinate3D` field validator rejecting non-finite values (`NaN`, `Inf`, `-Inf`).
+- **WellPlate integrity checks** (`src/labware/well_plate.py`)
+  - Added field constraints: `rows > 0`, `rows <= 26`, `columns > 0`.
+  - Added cross-field validator ensuring `len(wells) == rows * columns`.
+  - This prevents plates declaring inconsistent geometry (e.g. 96 wells declared with 1 actual well).
+- **Schema constraints** (`src/labware/deck/schema.py`)
+  - Added `gt=0` for `WellPlateEntry.rows` and `WellPlateEntry.columns`.
+  - Added validation that `x_offset_mm` and `y_offset_mm` are non-zero.
+- **Calibration semantics guard** (`src/labware/deck/loader.py`)
+  - Added explicit assertion-like checks that `calibration.a2` corresponds to adjacent physical A2 step:
+    - horizontal mode: `delta x == x_offset_mm`
+    - vertical mode: `delta y == y_offset_mm`
+- **Typing improvement** (`src/labware/deck/loader.py`)
+  - Added explicit `_point_to_coord(p: _Point3D)` annotation.
+- **Vial cleanup** (`src/labware/vial.py`)
+  - Removed dead `_validate_location` validator (redundant with required field validation).
+  - Removed implicit `"A1"` alias from `get_location`; now only `None` or vial `name` resolve.
+- **Tests added/updated**
+  - Added tests for:
+    - safe loader YAML parse errors
+    - safe loader missing-file behavior
+    - non-finite `Coordinate3D` rejection
+    - strict well-count validation
+    - row upper bound enforcement
+    - vial location alias removal (`"A1"` now errors)
+  - Updated existing passing tests to satisfy strict well-count validator.
+
+### Validation
+- Targeted: `pytest tests/test_labware.py tests/test_deck_loader.py -q` -> **38 passed**
+- Full suite: `pytest tests -q` -> **183 passed**
+
+### Notes
+- No hardware commands were executed; all validation used unit tests only.
+
+---
+
 ## Friendly deck loader exceptions (no traceback in sample script)
 
 ### Task
