--- a/progress/2026-02-17.md
+++ b/progress/2026-02-17.md
@@ -2,42 +2,42 @@
 
 ## Work Done: Protocol Setup Validation
 
-Added machine config loading, bounds validation, and protocol setup orchestration to ensure protocols are safe to run before execution.
+Added gantry config loading, bounds validation, and protocol setup orchestration to ensure protocols are safe to run before execution.
 
 ### New Modules
 
-**`src/machine/`** — Machine config loading
-- `yaml_schema.py`: Pydantic schemas (`MachineYamlSchema`, `WorkingVolumeYaml`, `CncYaml`) with strict validation (extra="forbid", min < max for all axes, homing strategy literal)
-- `machine_config.py`: `MachineConfig` and `WorkingVolume` frozen dataclasses. `WorkingVolume.contains(x, y, z)` checks inclusive bounds.
-- `loader.py`: `load_machine_from_yaml()` + `load_machine_from_yaml_safe()` with user-friendly error messages
-- `errors.py`: `MachineLoaderError`
+**`src/gantry/`** — Gantry config loading
+- `yaml_schema.py`: Pydantic schemas (`GantryYamlSchema`, `WorkingVolumeYaml`, `CncYaml`) with strict validation (extra="forbid", min < max for all axes, homing strategy literal)
+- `gantry_config.py`: `GantryConfig` and `WorkingVolume` frozen dataclasses. `WorkingVolume.contains(x, y, z)` checks inclusive bounds.
+- `loader.py`: `load_gantry_from_yaml()` + `load_gantry_from_yaml_safe()` with user-friendly error messages
+- `errors.py`: `GantryLoaderError`
 
 **`src/validation/`** — Bounds validation
-- `bounds.py`: `validate_deck_positions(machine, deck)` checks every labware position (all wells, all vial locations) against machine bounds. `validate_gantry_positions(machine, deck, board)` checks computed gantry positions for every (instrument, position) combination using formula `gantry_pos = deck_pos - instrument_offset`.
+- `bounds.py`: `validate_deck_positions(gantry, deck)` checks every labware position (all wells, all vial locations) against gantry bounds. `validate_gantry_positions(gantry, deck, board)` checks computed gantry positions for every (instrument, position) combination using formula `gantry_pos = deck_pos - instrument_offset`.
 - `errors.py`: `BoundsViolation` dataclass and `SetupValidationError` exception (collects all violations before raising)
 
 **`src/protocol_engine/setup.py`** — Protocol setup orchestrator
-- `setup_protocol(machine_path, deck_path, board_path, protocol_path, gantry=None)` loads all four configs, runs both validation passes, returns `(Protocol, ProtocolContext)` ready to run
+- `setup_protocol(gantry_path, deck_path, board_path, protocol_path, gantry=None)` loads all four configs, runs both validation passes, returns `(Protocol, ProtocolContext)` ready to run
 - Uses mock gantry by default for offline validation
 
 ### Modified Files
-- `src/protocol_engine/protocol.py`: Added optional `machine: MachineConfig | None = None` field to `ProtocolContext` (backward-compatible)
-- `README.md`: Added machine config, validation, setup sections; updated config paths
-- `AGENTS.md`: Added machine, validation, setup sections; updated config paths; added config directory structure
+- `src/protocol_engine/protocol.py`: Added optional `gantry: GantryConfig | None = None` field to `ProtocolContext` (backward-compatible)
+- `README.md`: Added gantry config, validation, setup sections; updated config paths
+- `AGENTS.md`: Added gantry, validation, setup sections; updated config paths; added config directory structure
 - `configs/decks/deck.sample.yaml`: Updated path reference in comment
 - `configs/protocols/protocol.sample.yaml`: Updated path reference in comment
 
 ### Config Reorganization
 Moved all config files from flat `configs/` into typed subdirectories:
-- `configs/machines/` — machine YAML (genmitsu_3018_PRO_Desktop.yaml, genmitsu_3018_PROver_v2.yaml)
+- `configs/gantries/` — gantry YAML (genmitsu_3018_PRO_Desktop.yaml, genmitsu_3018_PROver_v2.yaml)
 - `configs/decks/` — deck YAML (deck.sample.yaml, mofcat_deck.yaml)
 - `configs/boards/` — board YAML (mofcat_board.yaml)
 - `configs/protocols/` — protocol YAML (protocol.sample.yaml)
 
 ### Test Files Created
-- `tests/machine/test_yaml_schema.py` — 19 tests (schema field validation, bounds ordering, extra key rejection)
-- `tests/machine/test_machine_config.py` — 14 tests (WorkingVolume.contains, boundary edge cases, frozen dataclass)
-- `tests/machine/test_machine_loader.py` — 15 tests (happy path, missing file, invalid YAML, safe wrapper)
+- `tests/gantry/test_yaml_schema.py` — 19 tests (schema field validation, bounds ordering, extra key rejection)
+- `tests/gantry/test_gantry_config.py` — 14 tests (WorkingVolume.contains, boundary edge cases, frozen dataclass)
+- `tests/gantry/test_loader.py` — 15 tests (happy path, missing file, invalid YAML, safe wrapper)
 - `tests/validation/test_bounds_validation.py` — 24 tests (deck bounds, gantry bounds, edge cases, error detail)
 - `tests/setup/test_protocol_setup.py` — 12 tests (full setup, missing files, bounds violations, mock gantry)
 - `tests/setup/test_integration.py` — 5 tests (end-to-end with all 4 YAML configs, protocol execution)
@@ -51,7 +51,7 @@ Moved all config files from flat `configs/` into typed subdirectories:
 - Validation returns `list[BoundsViolation]` (not fail-fast) so all issues are reported at once
 - Inclusive boundaries: position exactly on x_min or x_max is valid
 - Gantry position formula replicated from `Board.move()` for offline validation
-- `ProtocolContext.machine` is optional for backward compatibility
+- `ProtocolContext.gantry` is optional for backward compatibility
 - Config files organized by type for clarity
 
 ---
@@ -63,7 +63,7 @@ Added a runnable CLI script that loads all 4 config files and prints human-reada
 ### Usage
 ```bash
 python setup/validate_setup.py \
-    configs/machines/genmitsu_3018_PROver_v2.yaml \
+    configs/gantries/genmitsu_3018_PROver_v2.yaml \
     configs/decks/mofcat_deck.yaml \
     configs/boards/mofcat_board.yaml \
     configs/protocols/protocol.sample.yaml
@@ -71,7 +71,7 @@ python setup/validate_setup.py \
 
 ### Output
 Step-by-step output showing:
-1. Each config loaded with details (machine working volume bounds, labware list with well counts, instruments with offsets, protocol steps)
+1. Each config loaded with details (gantry working volume bounds, labware list with well counts, instruments with offsets, protocol steps)
 2. Deck position validation results (PASS/FAIL with violation details)
 3. Gantry position validation results (PASS/FAIL with violation details)
 4. Final PASS/FAIL summary
@@ -91,7 +91,7 @@ Added a script that validates and runs a protocol end-to-end with real hardware.
 
 ### Flow
 1. Runs offline validation (reuses `validate_setup.py` output)
-2. Creates Gantry from raw machine config
+2. Creates Gantry from raw gantry config
 3. Calls `setup_protocol()` with real gantry for config loading + validation
 4. Connects to gantry, homes
 5. Runs `protocol.run(context)`
@@ -100,7 +100,7 @@ Added a script that validates and runs a protocol end-to-end with real hardware.
 ### Usage
 ```bash
 python setup/run_protocol.py \
-    configs/machines/genmitsu_3018_PROver_v2.yaml \
+    configs/gantries/genmitsu_3018_PROver_v2.yaml \
     configs/decks/mofcat_deck.yaml \
     configs/boards/mofcat_board.yaml \
     configs/protocols/protocol.sample.yaml
@@ -110,3 +110,56 @@ python setup/run_protocol.py \
 - `setup/run_protocol.py` (new) — end-to-end protocol runner
 - `README.md` (modified) — added run_protocol usage section
 - `AGENTS.md` (modified) — added run_protocol.py description
+
+---
+
+## Machine to Gantry Refactor
+
+Performed a strict repository-wide terminology refactor so machine config code and references now use gantry naming and live under the existing `src/gantry` module.
+
+### Work Done
+- Added gantry config modules in `src/gantry/`:
+  - `gantry_config.py` (`GantryConfig`, `WorkingVolume`)
+  - `yaml_schema.py` (`GantryYamlSchema`)
+  - `loader.py` (`load_gantry_from_yaml`, `load_gantry_from_yaml_safe`)
+  - `errors.py` (`GantryLoaderError`)
+  - Updated `src/gantry/__init__.py` exports
+- Updated protocol/setup/validation contracts:
+  - `ProtocolContext.machine` -> `ProtocolContext.gantry`
+- `setup_protocol(...)` now uses `gantry_path` naming for the config argument
+  - Bounds validators now accept `gantry: GantryConfig`
+- Updated setup scripts and calibration naming:
+  - `setup/validate_setup.py` and `setup/run_protocol.py` usage/help text now use `<gantry.yaml>`
+  - Added `calibration/home_gantry.py` pointing at `configs/gantries/...`
+  - Updated `setup/hello_world.py` wording and config paths
+- Reorganized config paths:
+  - Added `configs/gantries/genmitsu_3018_PROver_v2.yaml`
+  - Added `configs/gantries/genmitsu_3018_PRO_Desktop.yaml`
+- Added TDD-first renamed tests:
+  - `tests/gantry/test_gantry_config.py`
+  - `tests/gantry/test_loader.py`
+  - `tests/gantry/test_yaml_schema.py`
+  - Updated impacted setup/validation tests for gantry naming
+
+### Issues Found and Resolved
+- Initial red state after test rename: `ModuleNotFoundError` for missing `src.gantry` config modules.
+- Resolved by implementing gantry config/schema/loader/error modules and updating all impacted imports/contracts.
+
+### Verification
+- Ran focused refactor suites:
+  - `pytest tests/gantry tests/validation/test_bounds_validation.py tests/setup/test_protocol_setup.py tests/setup/test_integration.py -q`
+  - Result: `95 passed`
+
+### Follow-up Fix: `validate_setup.py` variable shadowing
+- Found runtime error where `gantry` was reused for two different concepts:
+  - loaded `GantryConfig` from YAML
+  - mock gantry hardware object for board loading
+- This caused bounds validation to receive a mock object (without `working_volume`) and fail with:
+  - `AttributeError: Mock object has no attribute 'working_volume'`
+- Fix applied in `setup/validate_setup.py`:
+  - `gantry_config` now stores the loaded config
+  - `mock_gantry` is used only for `load_board_from_yaml(...)`
+  - Bounds validation now consistently uses `gantry_config`
+- Verification:
+  - `pytest tests/setup/test_protocol_setup.py tests/setup/test_integration.py tests/validation/test_bounds_validation.py -q`
+  - Result: `41 passed`
