--- a/progress/2026-02-17.md
+++ b/progress/2026-02-17.md
@@ -163,3 +163,88 @@ Performed a strict repository-wide terminology refactor so machine config code a
 - Verification:
   - `pytest tests/setup/test_protocol_setup.py tests/setup/test_integration.py tests/validation/test_bounds_validation.py -q`
   - Result: `41 passed`
+
+---
+
+## PR Review Fixes (Session 2)
+
+Comprehensive code review identified 21 issues across the protocol setup validation branch. All issues fixed in this session.
+
+### Critical Fixes
+
+1. **`setup/run_protocol.py` — validation result ignored**
+   - `run_validation()` output was printed but result never checked; execution proceeded regardless of PASS/FAIL/ERROR
+   - Fix: `run_validation()` now returns `ValidationResult(output, passed)` dataclass; `run_protocol.py` checks `result.passed` and aborts with `sys.exit(1)` if validation fails
+
+2. **`setup/run_protocol.py` — runtime errors swallowed with exit code 0**
+   - `except Exception` caught all errors during protocol execution but exited with code 0
+   - Fix: Added `sys.exit(1)` after error handler, added `traceback.print_exc()` for debugging, `KeyboardInterrupt` exits with code 130
+
+3. **`setup/run_protocol.py` — health check failure ignored**
+   - Failed `gantry.is_healthy()` printed a warning but continued to execute the protocol
+   - Fix: Health check failure now prints error, disconnects, and exits with `sys.exit(1)`
+
+4. **`configs/protocols/protocol.sample.yaml` — broken YAML**
+   - Line 36 had `── Scan ──` without `#` prefix, making it invalid YAML syntax
+   - Fix: Added `#` prefix to make it a comment
+
+### Important Fixes
+
+5. **`setup/run_protocol.py` — stale docstring**
+   - Docstring said "3. Connect to gantry and home" but no homing code exists
+   - Fix: Updated to "3. Connect to gantry"
+
+6. **`src/protocol_engine/setup.py` — `MagicMock` in production code**
+   - `unittest.mock.MagicMock` used to create a fake gantry for offline validation
+   - Fix: Created `src/gantry/offline.py` with `OfflineGantry` class providing the same interface as `Gantry` without hardware; replaced all MagicMock usage
+
+7. **`src/protocol_engine/setup.py` — broad `except Exception` in `_load_*` helpers**
+   - All 4 `_load_*` functions caught `Exception` and re-wrapped, which could mask programming bugs
+   - Fix: Replaced `_load_*` helpers with direct calls to the `_safe` loader variants (e.g., `load_gantry_from_yaml_safe`) which already produce user-friendly errors
+
+8. **`setup/validate_setup.py` — imported private `_default_mock_gantry`**
+   - Fix: Replaced with public `OfflineGantry`
+
+9. **`src/gantry/gantry_config.py` — `WorkingVolume` missing `__post_init__`**
+   - No invariant enforcement that `min < max` for each axis
+   - Fix: Added `__post_init__` that validates `{axis}_min < {axis}_max` for x, y, z; added 4 new tests
+
+10. **`src/gantry/gantry_config.py` — `homing_strategy: str` loses type safety**
+    - Pydantic schema uses `Literal["xy_hard_limits", "standard"]` but domain model stores plain `str`
+    - Fix: Created `HomingStrategy(str, Enum)` with `XY_HARD_LIMITS` and `STANDARD` values; used in `GantryConfig` and loader
+
+11. **Stale documentation references**
+    - `AGENTS.md` and `README.md` referenced deleted `configs/genmitsu_3018_deck_config.yaml`
+    - Fix: Updated to reference new config directory structure
+
+12. **`configs/protocols/scan.yaml` — wrong file reference in comment**
+    - Comment said to load `protocol.sample.yaml` instead of `scan.yaml`
+    - Fix: Updated comment
+
+### Code Quality Fixes
+
+13. **`src/validation/bounds.py` — unused `Optional` import**
+    - Fix: Removed
+
+14. **`src/validation/bounds.py` — unknown labware types silently skipped**
+    - `_get_all_positions` had no `else` clause; new labware types would be silently ignored
+    - Fix: Added `else` clause with `logger.warning()` for unknown types
+
+15. **`src/validation/errors.py` — mutable `violations` list**
+    - `SetupValidationError.violations` was a mutable `list`
+    - Fix: Stored as `tuple` for immutability
+
+16. **`src/validation/errors.py` — `coordinate_type` and `axis` used plain `str`**
+    - Fix: Changed to `Literal["deck", "gantry"]` and `Literal["x", "y", "z"]`
+
+17. **`setup/validate_setup.py` — now returns structured `ValidationResult`**
+    - Previously returned a plain string; callers couldn't programmatically check pass/fail
+    - Fix: Returns `ValidationResult(output: str, passed: bool)` dataclass
+
+### New Files
+- `src/gantry/offline.py` — `OfflineGantry` stub class for offline validation
+
+### Test Results
+- 412 tests passing (excluding 8 pre-existing scan command failures unrelated to this PR)
+- 5 new tests added (4 for WorkingVolume invariants, 1 for HomingStrategy enum)
+- All gantry, setup, and validation tests pass: 100/100
