Fix merge conflicts

--- a/progress/2026-02-17.md
+++ b/progress/2026-02-17.md
@@ -248,3 +248,45 @@ Comprehensive code review identified 21 issues across the protocol setup validat
 - 412 tests passing (excluding 8 pre-existing scan command failures unrelated to this PR)
 - 5 new tests added (4 for WorkingVolume invariants, 1 for HomingStrategy enum)
 - All gantry, setup, and validation tests pass: 100/100
+
+---
+
+## Import Path Fix for `setup/run_protocol.py` (Session 3)
+
+Fixed a startup crash when running:
+
+```bash
+python setup/run_protocol.py \
+    configs/gantries/genmitsu_3018_PROver_v2.yaml \
+    configs/decks/mofcat_deck.yaml \
+    configs/boards/mock_mofcat_board.yaml \
+    configs/protocols/move.yaml
+```
+
+### Issue Found
+- Error: `ModuleNotFoundError: No module named 'gantry'`
+- Root cause: setup scripts inserted only project root into `sys.path`, while package imports (e.g. `gantry`, `instruments`) resolve from `src/`.
+
+### Work Done
+- Updated setup script path bootstrapping:
+  - `setup/validate_setup.py`: add `project_root / "src"` to `sys.path`
+  - `setup/run_protocol.py`: add `project_root / "src"` to `sys.path`
+- Hardened board imports for mixed execution contexts:
+  - `src/board/board.py`: compatibility import fallback for `BaseInstrument`; moved `Gantry` import to `TYPE_CHECKING`
+  - `src/board/loader.py`: compatibility import fallback for instrument drivers; switched `Board` import to relative (`from .board import Board`); moved `Gantry` import to `TYPE_CHECKING`
+- Added regression tests:
+  - `tests/setup/test_setup_imports.py`
+    - verifies `import setup.validate_setup` works with only project root on `PYTHONPATH`
+    - verifies `import setup.run_protocol` works with only project root on `PYTHONPATH`
+
+### Verification
+- Red phase (before fix):
+  - `pytest -q tests/setup/test_setup_imports.py`
+  - Failed with `ModuleNotFoundError: No module named 'gantry'`
+- Green phase (after fix):
+  - `pytest -q tests/setup/test_setup_imports.py`
+  - Result: `2 passed`
+
+### Notes
+- No hardware commands were run.
+- Existing unrelated repo change remained untouched (`src/protocol_engine/protocol.py` was already modified in the working tree).
