--- a/progress/2026-02-17.md
+++ b/progress/2026-02-17.md
@@ -408,3 +408,22 @@ Ran comprehensive 4-agent PR review (code-reviewer, test-coverage-analyzer, sile
 | `.gitignore` | Added SQLite journal file exclusions |
 | `pyproject.toml` | Added project root to package discovery |
 | `setup.cfg` | Updated package discovery |
+
+## Session: Fix pytest import collection failures
+
+### What I changed
+- Added pytest path configuration in `pyproject.toml`:
+  - `[tool.pytest.ini_options]`
+  - `pythonpath = ["src", "."]`
+- This ensures test collection can import top-level packages that live under `src/` (`deck`, `gantry`, `instruments`, `protocol_engine`, `board`) and root package `data`.
+
+### Why this was failing
+- The test suite imports modules as top-level packages (for example, `from deck import ...`).
+- Without `src` on Python import path during pytest collection, imports fail with `ModuleNotFoundError` before tests run.
+
+### Impact
+- Addresses the shared root cause behind the 26 import-time collection errors shown in terminal output.
+- No hardware-facing runtime logic was changed.
+
+### Notes
+- I have not executed pytest yet in this session; waiting for explicit permission because tests include CNC/instrument-related modules and your rule requires approval before running anything potentially hardware-related.
