Store UVVis measurements in SQL

--- a/progress/2026-02-17.md
+++ b/progress/2026-02-17.md
@@ -427,3 +427,59 @@ Ran comprehensive 4-agent PR review (code-reviewer, test-coverage-analyzer, sile
 
 ### Notes
 - I have not executed pytest yet in this session; waiting for explicit permission because tests include CNC/instrument-related modules and your rule requires approval before running anything potentially hardware-related.
+
+## Session: UV-Vis protocol-layer normalized measurement logging
+
+### Goal
+- Implement protocol-layer parsing so instrument `measure()` output is normalized before persistence, then written to `uvvis_measurements`.
+- Keep SQL table name as `uvvis_measurements`.
+- Use naming requested in planning: `MeasurementType` and `InstrumentMeasurement`.
+
+### What I changed
+- Added protocol measurement normalization module:
+  - `src/protocol_engine/measurements.py`
+  - Introduced `MeasurementType` enum with `UVVIS_SPECTRUM`
+  - Introduced frozen `InstrumentMeasurement` dataclass (`measurement_type`, `payload`, `metadata`)
+  - Added `normalize_measurement(instrument_name, method_name, raw_result)`:
+    - Accepts `UVVisSpectrum`
+    - Produces mofcat-style payload keys:
+      - `wavelength_nm`
+      - `intensity_au`
+    - Stores `integration_time_s` in metadata
+
+- Updated protocol scan command:
+  - `src/protocol_engine/commands/scan.py`
+  - Replaced direct `log_measurement(exp_id, raw_result)` call with:
+    1. `normalize_measurement(...)`
+    2. `log_measurement(exp_id, instrument_measurement)`
+
+- Updated DataStore dispatch:
+  - `data/data_store.py`
+  - `log_measurement()` now accepts `InstrumentMeasurement` and dispatches on `measurement_type`
+  - Added `_log_instrument_measurement(...)` for normalized measurements
+  - Kept legacy dispatch for existing `UVVisSpectrum`, `MeasurementResult`, and camera path string
+  - Refactored UV-Vis write path by introducing `_log_uvvis_values(...)` so both normalized and legacy UV-Vis flows share one SQL insert implementation
+
+### TDD work completed
+- Added failing tests first, then implemented code to pass:
+  - New file: `tests/protocol_engine/test_measurements.py`
+    - Validates normalization returns `InstrumentMeasurement`
+    - Validates `MeasurementType.UVVIS_SPECTRUM`
+    - Validates payload field mapping to `wavelength_nm`/`intensity_au`
+    - Validates integration time in metadata
+    - Validates unsupported raw result raises `TypeError`
+  - Updated `tests/data/test_data_store.py`
+    - Added dispatch/round-trip tests for `InstrumentMeasurement` -> `uvvis_measurements`
+  - Updated `tests/protocol_engine/test_scan_command.py`
+    - Added test asserting scan logs `InstrumentMeasurement` to DataStore
+
+### Verification run
+- Executed targeted non-hardware tests:
+  - `pytest tests/protocol_engine/test_measurements.py tests/data/test_data_store.py tests/data/test_command_logging.py tests/protocol_engine/test_scan_command.py`
+- Result: `44 passed`
+
+### Issues found and resolution
+- Initial expected failures:
+  - `ModuleNotFoundError: protocol_engine.measurements` during new test collection
+  - Resolved by implementing `src/protocol_engine/measurements.py`
+- No linter issues on touched files after implementation.
